tests/miniJava/pos/001087_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( true ) { } else System.out.println ( { } ) ; } }
