tests/miniJava/neg/000248_mutation.MiniJava
class java { public static void length ( String [ ] java ) { { } } }
